force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_1_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Address_1_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address 1 Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>