force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_1_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_1_External_Id__c</fullName>
    <label>Address 1 External Id</label>
    <type>TextArea</type>
</CustomField>