force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_1_Relation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_1_Relation_End_Date__c</fullName>
    <label>Address 1 Relation End Date</label>
    <type>Date</type>
</CustomField>