force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_1_Update_Spouse_Address__c.field-meta.xml
<CustomField>
    <fullName>Address_1_Update_Spouse_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Address 1 Update Spouse Address</label>
    <type>Checkbox</type>
</CustomField>