force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_2_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_2_External_Id__c</fullName>
    <label>Address 2 External Id</label>
    <type>TextArea</type>
</CustomField>