force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_2_Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Address_2_Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address 2 Is Preferred</label>
    <type>Checkbox</type>
</CustomField>