force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_2_Line_5__c.field-meta.xml
<CustomField>
    <fullName>Address_2_Line_5__c</fullName>
    <label>Address 2 Line 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>