force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_2_Relation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_2_Relation_End_Date__c</fullName>
    <label>Address 2 Relation End Date</label>
    <type>Date</type>
</CustomField>