force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_2_Relation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Address_2_Relation_Notes__c</fullName>
    <label>Address 2 Relation Notes</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>