force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_3_Line_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>Address_3_Line_1_Formula__c</fullName>
    <formula>Left(ucinn_ascendv2__Address_3_Line_1__c ,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 3 Line 1 Formula</label>
    <type>Text</type>
</CustomField>