force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_3_Relation_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_3_Relation_External_Id__c</fullName>
    <label>Address 3 Relation External Id</label>
    <type>TextArea</type>
</CustomField>