force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_3_Relation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_3_Relation_Start_Date__c</fullName>
    <label>Address 3 Relation Start Date</label>
    <type>Date</type>
</CustomField>