force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_3_Update_Spouse_Address__c.field-meta.xml
<CustomField>
    <fullName>Address_3_Update_Spouse_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address 3 Update Spouse Address</label>
    <type>Checkbox</type>
</CustomField>