force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_Relation_2_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Relation_2_Status__c</fullName>
    <defaultValue>&quot;Current&quot;</defaultValue>
    <label>Address Relation 2 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Address Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>