force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Address_Relation_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Relation_Status__c</fullName>
    <defaultValue>&quot;Current&quot;</defaultValue>
    <label>Address Relation 1 Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>