force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Constituent_Role__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Constituent_Role__c</fullName>
    <defaultValue>&quot;Employee&quot;</defaultValue>
    <label>Affiliation Constituent Role</label>
    <type>TextArea</type>
</CustomField>