force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Data_Source__c</fullName>
    <label>Affiliation Data Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>