force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Data_Source_Interim__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Data_Source_Interim__c</fullName>
    <label>Affiliation Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Data_Source</valueSetName>
    </valueSet>
</CustomField>