force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_End_Date__c</fullName>
    <label>Affiliation End Date</label>
    <type>Date</type>
</CustomField>