force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliation Is Preferred</label>
    <type>Checkbox</type>
</CustomField>