force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Occupation_Industry__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Occupation_Industry__c</fullName>
    <label>Affiliation Occupation Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Banking and Finance</fullName>
            </value>
            <value>
                <fullName>Education (PreK-12 only)</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>No Code</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>