force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Office__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Office__c</fullName>
    <label>Affiliation Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>