force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Organization_Role__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Organization_Role__c</fullName>
    <defaultValue>&quot;Employer&quot;</defaultValue>
    <label>Affiliation Organization Role</label>
    <type>TextArea</type>
</CustomField>