force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Organization_Role_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Organization_Role_Picklist__c</fullName>
    <label>Affiliation Organization Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Client - Accountant</fullName>
            </value>
            <value>
                <fullName>Client - Attorney</fullName>
            </value>
            <value>
                <fullName>Client - Financial Planner</fullName>
            </value>
            <value>
                <fullName>Community foundation contact</fullName>
            </value>
            <value>
                <fullName>Company Founded by individual</fullName>
            </value>
            <value>
                <fullName>Company Owned by Individual</fullName>
            </value>
            <value>
                <fullName>Company Previously Owned by Individual</fullName>
            </value>
            <value>
                <fullName>DAF Owned by Individual</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Employer - Second Business</fullName>
            </value>
            <value>
                <fullName>Estate of individual</fullName>
            </value>
            <value>
                <fullName>Financial Planner</fullName>
            </value>
            <value>
                <fullName>Former Employer matching</fullName>
            </value>
            <value>
                <fullName>Foundation Manager</fullName>
            </value>
            <value>
                <fullName>Foundation owned by Corporation</fullName>
            </value>
            <value>
                <fullName>Foundation owned by individual</fullName>
            </value>
            <value>
                <fullName>Funds Held in Trust Donor</fullName>
            </value>
            <value>
                <fullName>Funds Held in Trust Income Recipient</fullName>
            </value>
            <value>
                <fullName>Honorarium</fullName>
            </value>
            <value>
                <fullName>Honorarium for</fullName>
            </value>
            <value>
                <fullName>ISU Corporate Engagement Team Member</fullName>
            </value>
            <value>
                <fullName>ISU Corporate Engagement Team Org</fullName>
            </value>
            <value>
                <fullName>Retiree Employer</fullName>
            </value>
            <value>
                <fullName>Trust Managed by Trustee</fullName>
            </value>
            <value>
                <fullName>Trust Owned by Individual</fullName>
            </value>
            <value>
                <fullName>University Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>