force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Affiliation_Status__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Status__c</fullName>
    <label>Affiliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>