force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Alpha_Chi_Omega_Bond_Number__c.field-meta.xml
<CustomField>
    <fullName>Alpha_Chi_Omega_Bond_Number__c</fullName>
    <externalId>true</externalId>
    <label>Alpha Chi Omega Bond Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>