force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Anticipated_Grad__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Grad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anticipated Grad</label>
    <type>Checkbox</type>
</CustomField>