force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <label>Clinic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>