force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Constituent_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Contact_Type__c</fullName>
    <label>Constituent Contact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>