force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Degree_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Degree_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Degree Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>