force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Degree_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Degree_Data_Source__c</fullName>
    <label>Degree Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Data_Source</valueSetName>
    </valueSet>
</CustomField>