force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Email_1_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Email_1_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email 1 Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>