force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Email_1_is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Email_1_is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email 1 is Preferred</label>
    <type>Checkbox</type>
</CustomField>