force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Email_1_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_1_Start_Date__c</fullName>
    <label>Email 1 Start Date</label>
    <type>Date</type>
</CustomField>