force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Email_2_is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Email_2_is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email 2 is Preferred</label>
    <type>Checkbox</type>
</CustomField>