force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Email_3__c.field-meta.xml
<CustomField>
    <fullName>Email_3__c</fullName>
    <label>Email 3</label>
    <length>70</length>
    <type>Text</type>
</CustomField>