force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Email_3_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Email_3_Data_Source__c</fullName>
    <label>Email 3 Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Source</valueSetName>
    </valueSet>
</CustomField>