force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Email_3_Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Email_3_Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email 3 Is Preferred</label>
    <type>Checkbox</type>
</CustomField>