force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Email_3_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_3_Type__c</fullName>
    <label>Email 3 Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>