force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Employer_name__c.field-meta.xml
<CustomField>
    <fullName>Employer_name__c</fullName>
    <label>Employer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>