force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Essenza_Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>Essenza_Membership_ID__c</fullName>
    <externalId>true</externalId>
    <label>Essenza Membership ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>