force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/FirstLastEmail__c.field-meta.xml
<CustomField>
    <fullName>FirstLastEmail__c</fullName>
    <formula>lower(trim( ucinn_ascendv2__First_Name__c )) &amp;
lower(trim( ucinn_ascendv2__Last_Name__c )) &amp;
lower(trim( ucinn_ascendv2__Email_1__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstLastEmail</label>
    <type>Text</type>
</CustomField>