force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/FirstLastPhone__c.field-meta.xml
<CustomField>
    <fullName>FirstLastPhone__c</fullName>
    <formula>lower(trim( ucinn_ascendv2__First_Name__c )) &amp;
lower(trim( ucinn_ascendv2__Last_Name__c )) &amp;
lower(trim( ucinn_ascendv2__Phone_1__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstLastPhone</label>
    <type>Text</type>
</CustomField>