force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Hire_Date_ISU__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date_ISU__c</fullName>
    <description>Interim Hire Date for ISU Faculty/Staff</description>
    <label>Hire Date (ISU)</label>
    <type>Date</type>
</CustomField>