force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/iModules_Online_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>iModules_Online_Member_ID__c</fullName>
    <externalId>true</externalId>
    <label>iModules Online Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>