force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Address is preferred</description>
    <inlineHelpText>If checked, address is preferred</inlineHelpText>
    <label>Is Preferred</label>
    <type>Checkbox</type>
</CustomField>