force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISU_Address_1_Verified_by_Vendor__c.field-meta.xml
<CustomField>
    <fullName>ISU_Address_1_Verified_by_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address 1 Verified by Vendor</label>
    <type>Checkbox</type>
</CustomField>