force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISU_Doctor__c.field-meta.xml
<CustomField>
    <fullName>ISU_Doctor__c</fullName>
    <label>ISU Doctor</label>
    <length>225</length>
    <type>Text</type>
</CustomField>