force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISU_NetID__c.field-meta.xml
<CustomField>
    <fullName>ISU_NetID__c</fullName>
    <externalId>true</externalId>
    <label>ISU NetID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>