force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISU_Phone_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>ISU_Phone_1_Formula__c</fullName>
    <description>Remove parentheses, dashes, and spaces from the phone number.  Data import wizard automatically adds those characters during the import so this field removes and is used in the interim mapping</description>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( ucinn_ascendv2__Phone_1__c , &quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISU Phone 1 Formula</label>
    <type>Text</type>
</CustomField>