force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISU_Phone_1_Type_Verified__c.field-meta.xml
<CustomField>
    <fullName>ISU_Phone_1_Type_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone 1 Type Verified</label>
    <type>Checkbox</type>
</CustomField>