force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISU_Phone_2_Verified_by_Vendor__c.field-meta.xml
<CustomField>
    <fullName>ISU_Phone_2_Verified_by_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone 2 Verified by Vendor</label>
    <type>Checkbox</type>
</CustomField>