force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISU_Phone_3_Formula__c.field-meta.xml
<CustomField>
    <fullName>ISU_Phone_3_Formula__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( ucinn_ascendv2__Phone_3__c , &quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISU Phone 3 Formula</label>
    <type>Text</type>
</CustomField>