force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISU_Vet_Med_Organization__c.field-meta.xml
<CustomField>
    <fullName>ISU_Vet_Med_Organization__c</fullName>
    <label>Vet Med Organization</label>
    <length>150</length>
    <type>Text</type>
</CustomField>