force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ISUF_Match_Key__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Match_Key__c</fullName>
    <formula>IF(ucinn_ascendv2__Email_1__c = &apos;&apos; , &apos;&apos;, LEFT( ucinn_ascendv2__First_Name__c , 5) + ucinn_ascendv2__Email_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISUF Match Key</label>
    <type>Text</type>
</CustomField>