force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/isuf_Username__c.field-meta.xml
<CustomField>
    <fullName>isuf_Username__c</fullName>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>