force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Last_Admit__c.field-meta.xml
<CustomField>
    <fullName>Last_Admit__c</fullName>
    <label>Last Admit</label>
    <type>Date</type>
</CustomField>