force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Managed__c.field-meta.xml
<CustomField>
    <fullName>Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed</label>
    <type>Checkbox</type>
</CustomField>