force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/Managed_formula__c.field-meta.xml
<CustomField>
    <fullName>Managed_formula__c</fullName>
    <description>Formula checks managers and related managers on linked constituent to provide a field to filter on for list views and reports, will be blank if no valid constituent lookup</description>
    <formula>IF(   ISBLANK(ucinn_ascendv2__Contact__r.Managers_formula__c) &amp;&amp;  ISBLANK(ucinn_ascendv2__Contact__r.Related_Managers__c)  , FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managed Formula</label>
    <type>Checkbox</type>
</CustomField>